updated the sample to Java/JavaFX11